fix layout breaking when zooming in

--- a/src/discover/static/css/style.css
+++ b/src/discover/static/css/style.css
@@ -244,3 +244,9 @@ main {
     top: 0;
     bottom: auto;
 }
+
+.materialboxed {
+    position: absolute;
+    right: 0;
+    left: 50%;
+}
